# lightbulb-mcp

./: .gitignore  LICENSE  MCP.md  README.md  pyproject.toml
lightbulb/: __init__.py  __main__.py  _version.py  async_client.py  auth.py  cli.py  client.py  codex_plugin.py  connectors.py  errors.py  mcp_generated_tools.py  mcp_server.py  setup.py  stripe.py  token_cache.py  tool_descriptors.py  validators.py  xero.py
lightbulb/tools/: __init__.py
